<resources>
    <string name="app_name">Music App</string>
    <string name="category_pop">Pop Music</string>
    <string name="category_rap">Rap Music</string>
    <string name="category_80s">80\'s Music</string>
    <string name="now_playing">Now Playing&#8230;</string>
    <string name="start_time">0:00</string>
    <string name="end_time">4:35</string>
    <string name="back_button_desc">Back button</string>
    <string name="forward_button_desc">Forward button</string>
    <string name="play_button_desc">Play button</string>
    <string name="artwork_desc">Song artwork</string>
</resources>
